fixed toolbar on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,14 @@ footer {
 
 @media (max-width: 1200px) {
   header nav li:hover ul {
-    right: 81px;
+    display:inherit;
+    z-index:0;
+    list-style-type:none;
+    position:fixed;
+    top:2em; right:81px; left: auto; bottom: 0px;
+    max-width: 3.5em;
+    max-height: none;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 }
